// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`breadcrumbs > click on middle item 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 38px;
}

.emotion-0>*:not(:last-child) {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0>*:not(:last-child)::after {
  content: '/';
  color: #727683;
  padding: 0 0.25rem;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 38px;
}

.emotion-0>*:not(:last-child) {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0>*:not(:last-child)::after {
  content: '/';
  color: #727683;
  padding: 0 0.25rem;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-2 {
  display: inline;
  height: 38px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: auto;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2:not(:first-child) .emotion-5 {
  padding: 0 0.5rem;
}

.emotion-2:last-child .emotion-5 {
  pointer-events: none;
}

.emotion-2:last-child .emotion-9 {
  pointer-events: none;
  cursor: default;
}

.emotion-2 {
  display: inline;
  height: 38px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: auto;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2:not(:first-child) .emotion-5 {
  padding: 0 0.5rem;
}

.emotion-2:last-child .emotion-5 {
  pointer-events: none;
}

.emotion-2:last-child .emotion-9 {
  pointer-events: none;
  cursor: default;
}

.emotion-4 {
  padding-right: 0.5rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-4 {
  padding-right: 0.5rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-6 {
  display: inline;
  height: 38px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: auto;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  cursor: pointer;
}

.emotion-6[aria-disabled="true"] {
  pointer-events: none;
}

.emotion-6:not(:first-child) .emotion-5 {
  padding: 0 0.5rem;
}

.emotion-6:last-child .emotion-5 {
  pointer-events: none;
}

.emotion-6:last-child .emotion-9 {
  pointer-events: none;
  cursor: default;
}

.emotion-8 {
  min-width: auto;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  overflow: hidden;
  white-space: nowrap;
  display: block;
  text-overflow: ellipsis;
}

.emotion-8 {
  min-width: auto;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  overflow: hidden;
  white-space: nowrap;
  display: block;
  text-overflow: ellipsis;
}

<div
    data-testid="testing"
  >
    <nav
      aria-label="breadcrumb"
    >
      <ol
        class="emotion-0 emotion-1"
      >
        <li
          aria-disabled="false"
          class="emotion-2 emotion-3"
        >
          <a
            class="emotion-4 emotion-5 styles__1dtqm9e0 styles_prominence_stronger__1dtqm9e5 styles_sentiment_info__1dtqm9e2 styles_oneLine_false__1dtqm9e8 styles_variant_bodySmallStrong__1dtqm9ea styles_type_standalone__1dtqm9ed styles_undefined_compound_6__1dtqm9ek styles__1dtqm9en"
            data-variant="standalone"
            href="/step1"
          >
            Step 1
          </a>
        </li>
        <li
          aria-disabled="false"
          class="emotion-6 emotion-3"
        >
          <button
            class="emotion-8 emotion-9 styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
            type="button"
          >
            Step 2
          </button>
        </li>
        <li
          aria-disabled="false"
          class="emotion-2 emotion-3"
        >
          <button
            class="emotion-8 emotion-9 styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
            type="button"
          >
            Step 3
          </button>
        </li>
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`breadcrumbs > last item should no be clickable 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 38px;
}

.emotion-0>*:not(:last-child) {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0>*:not(:last-child)::after {
  content: '/';
  color: #727683;
  padding: 0 0.25rem;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 38px;
}

.emotion-0>*:not(:last-child) {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0>*:not(:last-child)::after {
  content: '/';
  color: #727683;
  padding: 0 0.25rem;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-2 {
  display: inline;
  height: 38px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: auto;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2:not(:first-child) .emotion-5 {
  padding: 0 0.5rem;
}

.emotion-2:last-child .emotion-5 {
  pointer-events: none;
}

.emotion-2:last-child .emotion-13 {
  pointer-events: none;
  cursor: default;
}

.emotion-2 {
  display: inline;
  height: 38px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: auto;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2:not(:first-child) .emotion-5 {
  padding: 0 0.5rem;
}

.emotion-2:last-child .emotion-5 {
  pointer-events: none;
}

.emotion-2:last-child .emotion-13 {
  pointer-events: none;
  cursor: default;
}

.emotion-4 {
  padding-right: 0.5rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-4 {
  padding-right: 0.5rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-10 {
  display: inline;
  height: 38px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: auto;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  cursor: pointer;
}

.emotion-10[aria-disabled="true"] {
  pointer-events: none;
}

.emotion-10:not(:first-child) .emotion-5 {
  padding: 0 0.5rem;
}

.emotion-10:last-child .emotion-5 {
  pointer-events: none;
}

.emotion-10:last-child .emotion-13 {
  pointer-events: none;
  cursor: default;
}

.emotion-12 {
  min-width: auto;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  overflow: hidden;
  white-space: nowrap;
  display: block;
  text-overflow: ellipsis;
}

.emotion-12 {
  min-width: auto;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  overflow: hidden;
  white-space: nowrap;
  display: block;
  text-overflow: ellipsis;
}

<div
    data-testid="testing"
  >
    <nav
      aria-label="breadcrumb"
    >
      <ol
        class="emotion-0 emotion-1"
      >
        <li
          aria-disabled="false"
          class="emotion-2 emotion-3"
        >
          <a
            class="emotion-4 emotion-5 styles__1dtqm9e0 styles_prominence_stronger__1dtqm9e5 styles_sentiment_info__1dtqm9e2 styles_oneLine_false__1dtqm9e8 styles_variant_bodySmallStrong__1dtqm9ea styles_type_standalone__1dtqm9ed styles_undefined_compound_6__1dtqm9ek styles__1dtqm9en"
            data-variant="standalone"
            href="/step1"
          >
            Step 1
          </a>
        </li>
        <li
          aria-disabled="false"
          class="emotion-2 emotion-3"
        >
          <a
            class="emotion-4 emotion-5 styles__1dtqm9e0 styles_prominence_stronger__1dtqm9e5 styles_sentiment_info__1dtqm9e2 styles_oneLine_false__1dtqm9e8 styles_variant_bodySmallStrong__1dtqm9ea styles_type_standalone__1dtqm9ed styles_undefined_compound_6__1dtqm9ek styles__1dtqm9en"
            data-variant="standalone"
            href="/step1/step2"
          >
            I'm a very long long long long long long long long long long long long step
          </a>
        </li>
        <li
          aria-disabled="false"
          class="emotion-10 emotion-3"
        >
          <button
            class="emotion-12 emotion-13 styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
            type="button"
          >
            Step 3
          </button>
        </li>
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`breadcrumbs > renders correctly with default values 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 38px;
}

.emotion-0>*:not(:last-child) {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0>*:not(:last-child)::after {
  content: '/';
  color: #727683;
  padding: 0 0.25rem;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-2 {
  display: inline;
  height: 38px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: auto;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2:not(:first-child) .emotion-5 {
  padding: 0 0.5rem;
}

.emotion-2:last-child .emotion-5 {
  pointer-events: none;
}

.emotion-2:last-child .emotion-13 {
  pointer-events: none;
  cursor: default;
}

.emotion-4 {
  padding-right: 0.5rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-12 {
  min-width: auto;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  overflow: hidden;
  white-space: nowrap;
  display: block;
  text-overflow: ellipsis;
}

<div
    data-testid="testing"
  >
    <nav
      aria-label="breadcrumb"
    >
      <ol
        class="emotion-0 emotion-1"
      >
        <li
          aria-disabled="false"
          class="emotion-2 emotion-3"
        >
          <a
            class="emotion-4 emotion-5 styles__1dtqm9e0 styles_prominence_stronger__1dtqm9e5 styles_sentiment_info__1dtqm9e2 styles_oneLine_false__1dtqm9e8 styles_variant_bodySmallStrong__1dtqm9ea styles_type_standalone__1dtqm9ed styles_undefined_compound_6__1dtqm9ek styles__1dtqm9en"
            data-variant="standalone"
            href="/step1"
          >
            Step 1
          </a>
        </li>
        <li
          aria-disabled="false"
          class="emotion-2 emotion-3"
        >
          <a
            class="emotion-4 emotion-5 styles__1dtqm9e0 styles_prominence_stronger__1dtqm9e5 styles_sentiment_info__1dtqm9e2 styles_oneLine_false__1dtqm9e8 styles_variant_bodySmallStrong__1dtqm9ea styles_type_standalone__1dtqm9ed styles_undefined_compound_6__1dtqm9ek styles__1dtqm9en"
            data-variant="standalone"
            href="/step1/step2"
          >
            I'm a very long long long long long long long long long long long long step
          </a>
        </li>
        <li
          aria-disabled="false"
          class="emotion-2 emotion-3"
        >
          <button
            class="emotion-12 emotion-13 styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
            type="button"
          >
            Step 3
          </button>
        </li>
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`breadcrumbs > renders correctly with invalid child 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 38px;
}

.emotion-0>*:not(:last-child) {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0>*:not(:last-child)::after {
  content: '/';
  color: #727683;
  padding: 0 0.25rem;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 38px;
}

.emotion-0>*:not(:last-child) {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0>*:not(:last-child)::after {
  content: '/';
  color: #727683;
  padding: 0 0.25rem;
  font-size: 0.875rem;
  font-weight: 500;
}

<div
    data-testid="testing"
  >
    <nav
      aria-label="breadcrumb"
    >
      <ol
        class="emotion-0 emotion-1"
      >
        Invalid child
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`breadcrumbs > renders correctly with minWidth and maxWidth 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 38px;
}

.emotion-0>*:not(:last-child) {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0>*:not(:last-child)::after {
  content: '/';
  color: #727683;
  padding: 0 0.25rem;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-2 {
  display: inline;
  height: 38px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: auto;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2:not(:first-child) .emotion-5 {
  padding: 0 0.5rem;
}

.emotion-2:last-child .emotion-5 {
  pointer-events: none;
}

.emotion-2:last-child .emotion-13 {
  pointer-events: none;
  cursor: default;
}

.emotion-4 {
  padding-right: 0.5rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-6 {
  display: inline;
  height: 38px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 100px;
  max-width: 200px;
}

.emotion-6:not(:first-child) .emotion-5 {
  padding: 0 0.5rem;
}

.emotion-6:last-child .emotion-5 {
  pointer-events: none;
}

.emotion-6:last-child .emotion-13 {
  pointer-events: none;
  cursor: default;
}

.emotion-12 {
  min-width: auto;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  overflow: hidden;
  white-space: nowrap;
  display: block;
  text-overflow: ellipsis;
}

<div
    data-testid="testing"
  >
    <nav
      aria-label="breadcrumb"
    >
      <ol
        class="emotion-0 emotion-1"
      >
        <li
          aria-disabled="false"
          class="emotion-2 emotion-3"
        >
          <a
            class="emotion-4 emotion-5 styles__1dtqm9e0 styles_prominence_stronger__1dtqm9e5 styles_sentiment_info__1dtqm9e2 styles_oneLine_false__1dtqm9e8 styles_variant_bodySmallStrong__1dtqm9ea styles_type_standalone__1dtqm9ed styles_undefined_compound_6__1dtqm9ek styles__1dtqm9en"
            data-variant="standalone"
            href="/step1"
          >
            Step 1
          </a>
        </li>
        <li
          aria-disabled="false"
          class="emotion-6 emotion-3"
        >
          <a
            class="emotion-4 emotion-5 styles__1dtqm9e0 styles_prominence_stronger__1dtqm9e5 styles_sentiment_info__1dtqm9e2 styles_oneLine_false__1dtqm9e8 styles_variant_bodySmallStrong__1dtqm9ea styles_type_standalone__1dtqm9ed styles_undefined_compound_6__1dtqm9ek styles__1dtqm9en"
            data-variant="standalone"
            href="/step1/step2"
          >
            I'm a very long long long long long long long long long long long long step
          </a>
        </li>
        <li
          aria-disabled="false"
          class="emotion-2 emotion-3"
        >
          <button
            class="emotion-12 emotion-13 styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
            type="button"
          >
            Step 3
          </button>
        </li>
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;
